@@ -39,6 +39,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - fixes for pbs_moms updating of comment and checkpoint name and time 
   e - change so we can reject hold requests on running jobs that do not have
       checkpoint enabled if system was configured with --enable-blcr
+  e - added output path job attribute so output / error files can be directed by
+      scheduler to a different host then the submit host. Done through qsub -d.
 
 2.3.6
   b - change back to not sending status updates until we get cluster addr message
